erDiagram
    %% Core Relationships (Implemented)
    DRIVER ||--o{ SHIPMENT : "assigned_to"
    VEHICLE ||--o{ SHIPMENT : "transports"

    DRIVER {
        serial id PK "Auto-increment primary key"
        varchar_255 name "NOT NULL - Driver full name"
        varchar_255 email "UNIQUE NOT NULL - Contact email"
        varchar_50 phone "Nullable - Phone number"
        varchar_50 status "CHECK: active, on-route, off-duty"
        varchar_100 license_number "Nullable - Driver license ID"
        date hire_date "Nullable - Employment start date"
        timestamp created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    VEHICLE {
        serial id PK "Auto-increment primary key"
        varchar_50 plate_number "UNIQUE NOT NULL - License plate"
        varchar_100 make "NOT NULL - Manufacturer"
        varchar_100 model "NOT NULL - Model name"
        integer year "Nullable - Manufacturing year"
        varchar_50 type "Nullable - Vehicle type (e.g., truck)"
        varchar_50 status "CHECK: available, in-transit, maintenance"
        integer mileage "Nullable - Current odometer reading"
        timestamp created_at "DEFAULT CURRENT_TIMESTAMP"
    }

    SHIPMENT {
        serial id PK "Auto-increment primary key"
        varchar_255 name "NOT NULL - Shipment identifier"
        varchar_255 customer "NOT NULL - Customer name"
        varchar_255 origin "Nullable - Pickup location"
        varchar_255 destination "Nullable - Delivery location"
        varchar_50 status "CHECK: pending, in-transit, delivered"
        integer driver_id FK "REFERENCES drivers ON DELETE SET NULL"
        integer vehicle_id FK "REFERENCES vehicles ON DELETE SET NULL"
        timestamp created_at "DEFAULT CURRENT_TIMESTAMP"
    }

